--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,7 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=<YOUR_NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY>
 CLERK_SECRET_KEY=<YOUR_CLERK_SECRET_KEY>
+
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_URL=/journal
+NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_URL=/new-user
