--- a/.env.local.example
+++ b/.env.local.example
@@ -5,3 +5,5 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_URL=/journal
 NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_URL=/new-user
+
+DATABASE_URL=<YOUR_DATABASE_URL>
