Mood Journal: Autosaving Entries

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.13",
     "pg": "^8.13.0",
     "react": "^18",
+    "react-autosave": "^0.4.4",
     "react-dom": "^18",
     "ws": "^8.18.0"
   },
