--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "@neondatabase/serverless": "^0.9.5",
     "@prisma/adapter-neon": "^5.20.0",
+    "framer-motion": "^11.11.8",
     "next": "14.2.13",
     "pg": "^8.13.0",
     "react": "^18",
