--- a/.env.local.example
+++ b/.env.local.example
@@ -7,3 +7,5 @@ NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_URL=/journal
 NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_URL=/new-user
 
 DATABASE_URL=<YOUR_DATABASE_URL>
+
+OPENAI_API_KEY=<YOUR_OPENAI_API_KEY>
