--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@neondatabase/serverless": "^0.9.5",
     "@prisma/adapter-neon": "^5.20.0",
     "framer-motion": "^11.11.8",
+    "langchain": "^0.3.2",
     "next": "14.2.13",
+    "openai": "^4.67.3",
     "pg": "^8.13.0",
     "react": "^18",
     "react-autosave": "^0.4.4",
