--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "langchain": "^0.3.2",
     "next": "14.2.13",
     "openai": "^4.67.3",
+    "openai-api": "^1.3.1",
     "pg": "^8.13.0",
     "react": "^18",
     "react-autosave": "^0.4.4",
