--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^18",
     "react-autosave": "^0.4.4",
     "react-dom": "^18",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@prisma/client": "^5.20.0",
