--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-autosave": "^0.4.4",
     "react-dom": "^18",
+    "recharts": "^2.13.0",
     "ws": "^8.18.0",
     "zod": "^3.23.8"
   },
