--- a/package.json
+++ b/package.json
@@ -32,15 +32,20 @@
   },
   "devDependencies": {
     "@prisma/client": "^5.21.1",
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "^16.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ws": "^8.5.12",
+    "@vitejs/plugin-react-swc": "^3.7.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
+    "jsdom": "^25.0.1",
     "postcss": "^8",
     "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^2.1.3"
   }
 }
