--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.8",
     "langchain": "^0.3.2",
+    "lucide-react": "^0.460.0",
     "next": "14.2.13",
     "openai": "^4.67.3",
     "openai-api": "^1.3.1",
