--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "@langchain/openai": "^0.3.10",
     "@neondatabase/serverless": "^0.9.5",
     "@prisma/adapter-neon": "^5.20.0",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cohere-ai": "^7.14.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.8",
@@ -29,6 +35,8 @@
     "react-autosave": "^0.4.4",
     "react-dom": "^18",
     "recharts": "^2.13.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.0",
     "zod": "^3.23.8"
   },
