--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@langchain/openai": "^0.3.10",
     "@neondatabase/serverless": "^0.9.5",
     "@prisma/adapter-neon": "^5.20.0",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
@@ -29,6 +31,7 @@
     "langchain": "^0.3.2",
     "lucide-react": "^0.460.0",
     "next": "14.2.13",
+    "next-themes": "^0.4.4",
     "openai": "^4.67.3",
     "openai-api": "^1.3.1",
     "pg": "^8.13.0",
