--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cohere-ai": "^7.14.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.8",
+    "input-otp": "^1.4.2",
     "langchain": "^0.3.2",
     "lucide-react": "^0.460.0",
     "next": "14.2.13",
